<resources>
    <!--
         Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
    -->
    <string name="app_name">Hackathon App</string>

    <!-- Detail Activity title used in the Detail activity toolbar -->
    <string name="title_activity_detail">DetailActivity</string>

    <!-- tab categories used in the viewPager tabs -->
    <string name="tab_all">ALL</string>
    <string name="tab_hiring">HIRING</string>
    <string name="tab_hackathon">HACK</string>
    <string name="tab_bookmark">BOOKMARK</string>

    <!-- share action used when user presses the share button in details view -->
    <string name="share">Share</string>
    <!-- Search action used when user presses the Search button in main activity -->
    <string name="search_title">Search</string>

    <!-- Place holder texts for the views -->
    <string name="name">Event Name</string>
    <string name="category">Category</string>
    <string name="website">Website</string>
    <string name="add_image">addImage</string>
    <string name="bookmark_image">bookmark</string>
    <string name="thumbnail">thumbnail</string>
    <string name="descriptionDetail">Battle of Bots is HackerEarths flagship Artificial Intelligence Challenge.</string>
    <string name="exp">Experiance: 2 - 8 years </string>
    <string name="ctc">CTC: INR 12L - INR 36L</string>

    <!-- used as the label when performing custom search -->
    <string name="app_label">HackathonApp</string>
    <!-- custom search hint -->
    <string name="app_hint">Search Event Name or Category</string>

    <!-- Error messages when the internet connection is not available to fetch data -->
    <string name="no_internet_title">Are you connected to internet?</string>
    <string name="no_internet_message">App could not connect to internet. You need to be connected to internet to sign in.</string>
    <string name="not_signed_in">There was a problem signing you in.</string>

    <!-- Sign Out button text-->
    <string name="sign_out">Sign Out</string>

    <!-- Place holder texts for the Detail Activity -->
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="site_example">hackerearth.com</string>
    <string name="category_example">hackerearth</string>

    <!-- Navigation view open and close -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Facebook Application ID for facebook login -->
    <string name="facebook_application_id" translatable="false">1255264684560678</string>
    <!-- Facebook Application ID, prefixed by 'fb'.  Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb1255264684560678</string>

    <!-- Conent autority and sync adapter details -->
    <string name="sync_account_type">com.dhayanand.example</string>
    <string name="content_authority">com.dhayanand.hackathonapp</string>

    <!-- Navigation view actions -->
    <string name="nav_settings">Settings</string>
    <string name="logout">logout</string>
    <string name="notification">Notifications</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="sample_name_nav">Dhayanand Baskar</string>
    <string name="sample_email_nav">dhayanand.baskar@gmail.com</string>

    <!-- Widget title -->
    <string name="title_widget_detail">Hackathon Details</string>
    <!-- Widget error message -->
    <string name="empty_hack_list">No Information Available.Please Sign in</string>

    <!-- share detail menu item title-->
    <string name="shareHack">shareHack</string>

    <!-- Place Holder text for suggestion in custom search -->
    <string name="suggestion_category">Suggestion_catagory</string>
    <string name="suggestion">Suggestion</string>

    <string name="toolbar_deatil_description">detail activity tool</string>
    <string name="toolbar_main_description">main activity tool bar</string>
    <string name="navigation_description">Navigation view</string>
    <string name="bookmark_description">Bookmark hackathon event</string>
    <string name="navigation_header_description">Navigation Bannar image</string>
    <string name="switch_on_internet_message">Please switch on the Internet</string>
    <string name="connect_to_internet_snackbar">CONNECT</string>
    <string name="failed_to_insert_row">Failed to insert row into</string>
    <string name="unknown_url">Unknown Uri :</string>
    <string name="no_data_available">No Data Available</string>
</resources>
