<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="@dimen/activity_main_list_item_card_margin_left_right"
	android:layout_marginRight="@dimen/activity_main_list_item_card_margin_left_right"
	android:layout_marginTop="@dimen/activity_main_list_item_card_margin_top_down"
    android:layout_marginBottom="@dimen/activity_main_list_item_card_margin_top_down"
	card_view:cardCornerRadius="@dimen/activity_main_list_item_card_radius"
    card_view:cardBackgroundColor="@color/colorCard">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<ImageView
			android:id="@+id/img_row"
			android:layout_width="@dimen/activity_main_list_item_margin_image_size"
			android:layout_height="@dimen/activity_main_list_item_margin_image_size"
			android:layout_margin="@dimen/activity_main_list_item_margin_image"
			android:contentDescription="@string/thumbnail"
			android:src="@drawable/topper"/>

		<LinearLayout
			android:layout_width="@dimen/activity_main_list_item_layout_margin"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="vertical">
			<TextView
				android:id="@+id/name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/activity_main_list_item_margin_name"
				android:text="@string/name"
				android:textColor="@color/colorText"
				android:textSize="@dimen/activity_main_list_item_text_size_name"
				android:textStyle="bold"/>

			<TextView
				android:id="@+id/category"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/activity_main_list_item_margin"
				android:text="@string/category"
                android:textColor="@color/colorText"
				android:textSize="@dimen/activity_main_list_item_text_size_category"
				android:textStyle="italic"/>
			<TextView
				android:id="@+id/website"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/activity_main_list_item_margin"
				android:text="@string/website"
				android:textColor="@color/colorText"
				android:textSize="@dimen/activity_main_list_item_text_size_website"
				android:textStyle="italic"/>

		</LinearLayout>

		</LinearLayout>


</android.support.v7.widget.CardView>

