<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/touch_selector_white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/widget_icon"
            android:layout_gravity="center"
            android:layout_width="@dimen/list_icon"
            android:layout_height="@dimen/list_icon"
            android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
            android:layout_marginEnd="@dimen/abc_list_item_padding_horizontal_material"
            android:contentDescription="@string/thumbnail"
            tools:src="@drawable/topper"
            />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/widget_detail_item_linear_width"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCard"
                android:text="@string/name"/>

            <TextView
                android:id="@+id/widget_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorCard"
                tools:text="@string/category"/>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>