<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/header_background">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/nav_hearder_img"
            android:layout_width="@dimen/nav_header_image_size"
            android:layout_height="@dimen/nav_header_image_size"
            android:layout_marginLeft="@dimen/nav_header_image_margin_left"
            android:adjustViewBounds="true"
            android:contentDescription="@string/navigation_header_description"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_header_text_layout_height"
            android:orientation="vertical"
            android:paddingBottom="@dimen/nav_header_text_layout_padding"
            android:paddingLeft="@dimen/nav_header_text_layout_padding">

            <TextView
                android:id="@+id/txvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="bottom"
                android:text="@string/sample_name_nav"
                android:textColor="@color/white"
                android:textSize="@dimen/nav_header_text_size" />

            <TextView
                android:id="@+id/txvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:gravity="bottom"
                android:text="@string/sample_email_nav"
                android:textColor="@color/white"
                android:textSize="@dimen/nav_header_text_size" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
